--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./bin/www.js",
     "dev": "nodemon ./bin/www.js",
-    "users": "node ./models/data/users.js"
+    "users": "node ./models/data/users.js",
+    "tournaments": "node ./models/data/tournaments.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
