--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "dotenv": "^16.3.1",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "googleapis": "^126.0.1",
     "http-errors": "~1.6.3",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.5",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1"
   }
