--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-errors": "~1.6.3",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
+    "mercadopago": "^1.5.17",
     "mongoose": "^7.4.5",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.5",
